     footnote for every list entry, plus a field in the Description dialog
   * The Add-ons Manager filter textbox is preserved during the same
     connection (i.e. while installing multiple add-ons)
 * Add-ons server:
   * Reject add-ons with names or titles that begin with a WML text format
     markup character (any of *, `, ~, {, ^, }, |, @, #, <, &)
 * Campaigns:
   * Added a note to all final scenarios, stating which one is the last scenario
   * Dead Water:
     * Updated the Stun weapon special code to use [object] duration=turn
   * Delfadors Memoirs:
     * Showdown in the Northern Swamp: added to conditional notes in objectives
       about who should kill Iliah-Malal
   * Dead Water:
     * Changed uses of "ai turn" to "side # turn" ("[event]name=ai turn" breaks replays)
   * Descent into Darkness:
     * Fix most possible cases for Darken Volk becoming "stuck"
       in 09_A_Small_Favor3.
   * Heir to the Throne:
     * Implemented FR #19418: the Orcs destroy the villages near Konrad's castle
       when capturing them in The Elves Besieged
     * Fixed bug #19531: scroll to reinforcement units in Blackwater Port
     * Fixed bug #19517: The injured sergeant in HttT: Cliffs of Thoria will now always
       become visible when he is discovered.
   * Legend of Wesmere:
     * Fix bug #19577 - some terrain was not snow covered
     * Fix bug #19565 - yetis remaining under fog when they appear in scenario 10
   * Liberty:
     * Fixed unknown unit type errors in 04_Unlawful_Orders
   * Sceptre of Fire:
     * Searching for the Runecrafter: updated the "sighted location" code to
       make use of [filter_vision], plus a SSF
   * Son of the Black Eye:
     * Removed Al'Brock and Flar'Tar death as defeat condition in objectives in
       Civil War
     * Fixed bug #19684: Kapou'e says a different message if he kills the first Elf
       in Silent Forest
     * Silent Forest: the messages that appear upon killing the first Elf can be