@@ -16,6 +16,8 @@ Version 1.11.0-svn:
  * Add-ons server:
    * Reject add-ons with names or titles that begin with a WML text format
      markup character (any of *, `, ~, {, ^, }, |, @, #, <, &)
+ * AI:
+   * AI now properly considers the expected damage from poison when attacking using poisoners.
  * Campaigns:
    * Added a note to all final scenarios, stating which one is the last scenario
    * Dead Water:
